# MIPS_simulator

./: .gitignore  CMakeLists.txt  Pipelined basic instruction set simulation.pptx  README.md  a.out  b.out  basic_demo.key  basic_demo.pptx  benchmark.pptx  demo.asm  encoding.txt  isa_design_doc_final.pages  memcache.key  memcache_demo.key  readme.txt  ~$Pipelined basic instruction set simulation.pptx
GenTestCases/: GenTestCases  GenTestCases.cpp  mixed_random_load_store.txt  mixed_sequential_load_store.txt  random_load.txt  random_store.txt  sequential_load.txt  sequential_store.txt
asm/: .asm.cpp.swo  a.out  asm  asm.cpp  decode  decode.cpp  demo1.asm  demo1.out  demo2.asm  demo2.out  disasm  disasm.cpp  exchange_sort.asm  exchange_sort.cpp  exchange_sort.out  matrix_mulplication.asm  matrix_mulplication.cpp  matrix_mulplication.out  matrix_mulplication_large.asm  matrix_mulplication_large.out  matrix_mulplication_simd.asm  matrix_mulplication_simd.out  matrix_mulplication_simd_large.asm  matrix_mulplication_simd_large.out  pipe.asm  pipe.out  pipe2.asm  pipe2.out
memcache/: .main.cpp.swo  .main.cpp.swp  Cache.cpp  Cache.h  Globals.cpp  Globals.h  Makefile  Memcache.cpp  Memcache.h  Memory.cpp  Memory.h  main  main.cpp  readme.txt
report/: Pipelined basic instruction set simulation.pptx  isa_design_doc_final.pages  memcache_demo.key  report.tex  reporturl.txt
simulator/: cache.cpp  cache.h  cacheview.h  commons.h  configdialog.cpp  configdialog.h  cpu.cpp  cpu.h  cpuview.h  fpu.cpp  fpu.h  main.cpp  memcache.h  memory.cpp  memory.h  memoryview.h  memsys.cpp  vu.h  (+7 more)
(+3 files in other folders)
